# Nexterm

./: .gitignore  CHANGELOG.md  CLAUDE.ja.md  CLAUDE.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.ja.md  README.md  SECURITY.md  book.toml  deny.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  flatpak.yml  fuzz.yml  pages.yml  release.yml  sbom.yml
.obsidian/: workspace.json
.serena/: project.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DESIGN.md  KEYBINDINGS.md  MIGRATION.md  PROTOCOL.md  SBOM.md  TESTING_STRATEGY.md  THREAT_MODEL.md  benchmarks.md  plugin-api.md  shell-integration.md
docs/adr/: 0001-wgpu-upgrade.md  0002-protocol-versioning.md  0003-plugin-api-v2.md  0004-toml-lua-config.md  0005-bsp-pane-layout.md  0006-postcard-vs-bincode.md  0007-snapshot-v1-deprecation.md  README.md  template.md
docs/archive/: README.md
docs/migration/: v1.x-legacy.md
docs/plans/: blocks-implementation.md  phase-2c-process-icon.md  ui-ux-modernization-v2.md
docs/src/: README.md  SUMMARY.md  adr-index.md  architecture.md  install.md  quickstart.md  troubleshooting.md  windows.md
docs/src/advanced/: performance.md  shaders.md
docs/src/config/: keybindings.md  lua-recipes.md  lua.md  overview.md  snippets.md  toml.md
docs/src/features/: graphics.md  plugins.ja.md  plugins.md  serial.md  sessions.md  sftp.md  ssh.md  terminal.md  web.md
examples/: custom_config.lua
examples/plugins/: README.md
examples/plugins/command-counter/: Cargo.toml
examples/plugins/command-counter/src/: lib.rs
examples/plugins/echo-suppress/: Cargo.toml
examples/plugins/echo-suppress/src/: lib.rs
examples/plugins/error-detector/: Cargo.toml
examples/plugins/error-detector/src/: lib.rs
examples/plugins/timestamp-injector/: Cargo.toml
examples/shaders/: README.md  amber_text.wgsl  crt.wgsl  glow.wgsl  grayscale_text.wgsl  matrix.wgsl
linux/: AppRun  install.sh  nexterm.desktop
macos/: Info.plist
nexterm-client-core/: Cargo.toml
nexterm-client-core/src/: lib.rs
nexterm-client-core/tests/: ipc_handshake.rs
nexterm-client-gpu/: Cargo.toml
nexterm-client-gpu/src/: accessibility.rs  animations.rs  color_util.rs  command_blocks.rs  connection.rs  cursor_motion.rs  drop_target.rs  font.rs  glyph_atlas.rs  host_manager.rs  key_map.rs  macro_picker.rs  main.rs  named_blocks.rs  notification.rs  palette.rs  platform.rs  quake.rs  renderer.rs  scrollback.rs  settings_panel.rs  shaders.rs  signature_verify.rs  state.rs  tab_icons.rs  update_checker.rs  vertex_util.rs
nexterm-client-gpu/src/renderer/: app.rs  background_pass.rs  event_handler.rs  gpu_buffers.rs  grid_verts.rs  image.rs  input_handler.rs  mod.rs  overlay_verts.rs  render_frame.rs  shader_reload.rs  ui_verts.rs  wgpu_init.rs
nexterm-client-gpu/src/renderer/event_handler/: accessibility.rs  consent.rs  keyboard.rs  lifecycle.rs  mod.rs  mouse.rs  settings_panel_hit.rs  window.rs
nexterm-client-gpu/src/renderer/input_handler/: action.rs  copy_mode.rs  font.rs  mod.rs  special_modes.rs  ssh.rs
nexterm-client-gpu/src/renderer/overlay/: dialog.rs  key_hint.rs  mod.rs  picker.rs  settings.rs  util.rs
nexterm-client-gpu/src/state/: blocks.rs  consent.rs  menus.rs  mod.rs  pane.rs  search.rs  selection.rs  server_message.rs
nexterm-client-tui/: Cargo.toml
nexterm-client-tui/src/: connection.rs  input.rs  main.rs  render.rs  state.rs
nexterm-config/: Cargo.toml
nexterm-config/src/: defaults.rs  keyring.rs  lib.rs  loader.rs  lua_hooks.rs  lua_sandbox.rs  lua_worker.rs  schema.rs  status_bar.rs  watcher.rs  wsl.rs
nexterm-config/src/schema/: animations.rs  blocks.rs  color.rs  font.rs  gpu.rs  hosts.rs  log.rs  mod.rs  quake.rs  security.rs  shell.rs  tokens.rs  ui.rs  web.rs  window.rs
nexterm-ctl/: Cargo.toml
nexterm-ctl/src/: ipc.rs  main.rs
nexterm-ctl/src/cmd/: ghostty.rs  mod.rs  plugin.rs  quake.rs  record.rs  service.rs  session.rs  template.rs  theme.rs  util.rs  workspace.rs  wsl.rs
nexterm-i18n/: Cargo.toml
nexterm-i18n/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  zh-CN.json
nexterm-i18n/src/: lib.rs
nexterm-launcher/: Cargo.toml
nexterm-launcher/src/: main.rs
nexterm-plugin/: Cargo.toml
nexterm-plugin/src/: lib.rs
nexterm-proto/: Cargo.toml
nexterm-proto/src/: cell.rs  grid.rs  lib.rs  message.rs
nexterm-server/: Cargo.toml
nexterm-server/src/: hooks.rs  ipc.rs  lib.rs  main.rs  pane.rs  persist.rs  runtime_config.rs  serial.rs  session.rs  snapshot.rs  template.rs  test_utils.rs  web.rs  window.rs
nexterm-server/src/ipc/: dispatch.rs  dispatch_util.rs  file_dispatch.rs  handler.rs  key.rs  mod.rs  pane_dispatch.rs  platform.rs  plugin_dispatch.rs  session_dispatch.rs  sftp.rs  window_dispatch.rs
nexterm-server/src/web/: access_log.rs  auth.rs  middleware.rs  mod.rs  oauth.rs  otp.rs  rate_limit.rs  router.rs  tls.rs
nexterm-server/src/web/handlers/: assets.rs  login.rs  mod.rs  oauth.rs  page.rs  ws.rs
nexterm-server/src/window/: bsp.rs  floating.rs  mod.rs  tests.rs  tiling.rs
nexterm-server/static/: index.html  login.html  setup.html
nexterm-server/tests/: ipc_integration.rs  snapshot_roundtrip.rs
nexterm-ssh/: Cargo.toml
nexterm-ssh/src/: lib.rs
nexterm-vt/: Cargo.toml
nexterm-vt/benches/: vt_throughput.rs
nexterm-vt/fuzz/: Cargo.toml  README.md
nexterm-vt/fuzz/fuzz_targets/: ipc_postcard.rs  kitty_image.rs  osc_url.rs  sixel_decode.rs  vt_parser_input.rs
nexterm-vt/src/: image.rs  lib.rs  performer.rs  screen.rs
nexterm-vt/tests/: proptest_image.rs  vt_compliance.rs
pkg/: signpath-application.md
pkg/flatpak/: cargo-sources.json  io.github.kusanagi_jn.Nexterm.metainfo.xml  io.github.kusanagi_jn.Nexterm.yaml  io.github.mizu_jun.Nexterm.metainfo.xml  io.github.mizu_jun.Nexterm.yaml
pkg/homebrew/: nexterm.rb
pkg/scoop/: nexterm.json
pkg/winget/: mizu-jun.Nexterm.yaml
scripts/: install-service.ps1  regenerate-flatpak-sources.sh  uninstall-service.ps1
wix/: main.wxs
(+1 files in other folders)
