[package]
name = "nexterm-client-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# クライアント-サーバー IPC 共通実装。
# nexterm-client-gpu と nexterm-client-tui の両方が利用する。
# Sprint 3-6: 重複していた connection.rs ロジックをここに集約した。

[dependencies]
nexterm-proto = { path = "../nexterm-proto" }
tokio = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints]
workspace = true
