[package]
name = "nexterm-client-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# シングルバイナリ: nexterm.exe としてビルドする
[[bin]]
name = "nexterm"
path = "src/main.rs"

[dependencies]
nexterm-proto = { path = "../nexterm-proto" }
nexterm-config = { path = "../nexterm-config" }
# サーバーを同一プロセス内の Tokio タスクとして起動するために組み込む
nexterm-server = { path = "../nexterm-server" }
nexterm-i18n = { path = "../nexterm-i18n" }
tokio = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
cosmic-text = { workspace = true }
image = { workspace = true }
regex = { workspace = true }
fuzzy-matcher = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
# Phase 3: クリップボード統合
arboard = { workspace = true }
# Phase 3: 設定ホットリロード監視
notify = { workspace = true }
# 設定ファイルの構造保持付き編集
toml_edit = { workspace = true }
# シェルパス展開（~ → ホームディレクトリ）
shellexpand = "3"
unicode-width = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
dirs = "5"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
] }
