[package]
name = "nexterm-client-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
nexterm-proto = { path = "../nexterm-proto" }
# Sprint 3-6: クライアント-サーバー IPC 共通実装（GPU/TUI 共有）
nexterm-client-core = { path = "../nexterm-client-core" }
tokio = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
