[package]
name = "nexterm-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Nexterm launcher — auto-starts the server and opens the GPU client"

[[bin]]
name = "nexterm"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# Windows API: Named Pipe の存在確認・プロセス起動
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
] }
