[package]
name = "nexterm-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Nexterm WASM plugin host runtime"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

# WASM runtime (pure-Rust implementation, cross-platform)
wasmi = "0.38"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
