[package]
name = "nexterm-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
nexterm-proto = { path = "../nexterm-proto" }
nexterm-vt = { path = "../nexterm-vt" }
nexterm-config = { path = "../nexterm-config" }
nexterm-ssh = { path = "../nexterm-ssh" }
tokio = { workspace = true }
portable-pty = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }

serialport = { workspace = true }
zeroize = "1.8"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
rust-embed = { version = "8", features = ["include-exclude"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
