[package]
name = "nexterm-ssh"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
russh = { version = "0.60", default-features = false, features = ["ring", "rsa", "flate2"] }
russh-sftp = "2"
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
zeroize = "1.8"

[lints]
workspace = true
