[package]
name = "nexterm-vt"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
nexterm-proto = { path = "../nexterm-proto" }
vte = { workspace = true }
thiserror = { workspace = true }
unicode-width = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# Sprint 4-4: Sixel / Kitty パーサのプロパティテスト
proptest = { workspace = true }

[lints]
workspace = true
