[package]
name = "nexterm-vt"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
nexterm-proto = { path = "../nexterm-proto" }
vte = { workspace = true }
thiserror = { workspace = true }
unicode-width = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }

[dev-dependencies]
# Sprint 4-4: property-based tests for the Sixel / Kitty parsers.
proptest = { workspace = true }
# Sprint 5-3 / C5: criterion benchmarks.
criterion = { workspace = true }

[lints]
workspace = true

# Sprint 5-3 / C5: throughput benchmarks for VT advance.
# Run with: cargo bench -p nexterm-vt --bench vt_throughput
[[bench]]
name = "vt_throughput"
harness = false
