[package]
name = "nexterm-vt-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

# Sprint 3-5: nexterm-vt の VT パーサ・Sixel/Kitty デコーダ・OSC URL ハンドラに対する
# cargo-fuzz ベースのファジング基盤。
#
# 親ワークスペース（ルート Cargo.toml）の `exclude = ["nexterm-vt/fuzz"]` で
# 除外しているが、cargo の最新版では `exclude` だけだとサブクレートからの
# workspace 推論を完全には抑制できず、cargo-fuzz が "current package believes
# it's in a workspace when it's not" エラーを起こす。
# `cargo fuzz init` が生成する標準テンプレートに従い、本マニフェストを
# self-contained な workspace として宣言する（下の `[workspace]` テーブル）。
#
# 実行例:
#   cargo install cargo-fuzz
#   cd nexterm-vt
#   cargo +nightly fuzz run vt_parser_input -- -max_total_time=60

[package.metadata]
cargo-fuzz = true

# このマニフェストを独立したワークスペースとして宣言し、親ワークスペースからの
# 推論を遮断する（cargo-fuzz 公式テンプレートのパターン）。
[workspace]
members = ["."]

[dependencies]
libfuzzer-sys = "0.4"
nexterm-vt = { path = ".." }

[[bin]]
name = "vt_parser_input"
path = "fuzz_targets/vt_parser_input.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sixel_decode"
path = "fuzz_targets/sixel_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "kitty_image"
path = "fuzz_targets/kitty_image.rs"
test = false
doc = false
bench = false

[[bin]]
name = "osc_url"
path = "fuzz_targets/osc_url.rs"
test = false
doc = false
bench = false

# fuzz バイナリは riscv-none-eabi 等を使わないので、最適化を高めて実行時間を短縮する
[profile.release]
debug = 1
